Marquee annoucement from file

--- a/src/settings.json
+++ b/src/settings.json
@@ -2,8 +2,9 @@
     "masjidName" : "Masjid Jamek Sungai Rambai Bukit Mertajam",
     "announcement" : [
         "Tidak dibenarkan menghisap rokok",
-        "Tutup handphone",
-        "Selamat berpuasa"
+        "Vape takpa",
+        "Selamat berpuasa",
+        "Jangan tuang pls..."
     ],
     "prayerTimes" : {
         "fileLocation" : "./DataStore/takwim-png-2022.json",
