--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "moment-hijri": "^2.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-fast-marquee": "^1.3.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0"
   },
